[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/rocket_sprite.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/starfield.gd" id="3"]
[ext_resource type="Script" path="res://scripts/screen_effects.gd" id="4"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.05, 1)

[node name="Starfield" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ROCKET TYCOON"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Ready for First Launch"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="DesignButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "DESIGN ROCKET"

[node name="LaunchButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "QUICK LAUNCH (Default Rocket)"

[node name="StatusPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox"]
visible = false
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/StatusPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/StatusPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/StatusPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸš€ Launch in Progress..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/StatusPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/StatusPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StageList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/StatusPanel/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ResultPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox"]
visible = false
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/ResultPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/ResultPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/ResultPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "RESULT"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/ResultPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/ResultPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/ResultPanel/MarginContainer/VBox/CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Message goes here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TryAgainButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/ResultPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "TRY AGAIN"

[node name="RocketVisual" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 160.0
offset_top = 500.0
offset_right = 160.0
offset_bottom = 500.0

[node name="RocketSprite" parent="RocketVisual" instance=ExtResource("2")]
layout_mode = 1

[node name="RocketLauncher" type="RocketLauncher" parent="."]

[node name="ScreenEffects" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
script = ExtResource("4")

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/DesignButton" to="." method="_on_design_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/LaunchButton" to="." method="_on_launch_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ContentVBox/ResultPanel/MarginContainer/VBox/TryAgainButton" to="." method="_on_try_again_button_pressed"]
